add : flash sale section

--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+
+
   <!-- Vendor -->
   <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="assets/vendor/swiper/swiper-bundle.min.css">
   <link rel="stylesheet" href="assets/vendor/bootstrap-icons/bootstrap-icons.css" />
   <!-- Main css -->
   <link rel="stylesheet" href="assets/css/reset.css" />
   <link rel="stylesheet" href="assets/css/style.css" />
+
 </head>
 
 <body class="index-page">
@@ -231,12 +235,92 @@
               </div>
             </div>
           </div>
-
         </div>
 
+        <div class="row">
+          <div class="col-12 mt-4">
+            <div class="section-header">
+              <p>Món ăn nổi bật</p>
+              <!-- <div class="swipper">
+                <div class="swipper-wrapper">
+                  <div class="swipper-slide">
+                
+                  </div>
+                </div>
+              </div> -->
+
+            </div>
+            <div class="section-body">
+              <div class="mycard">
+                <img src="assets/images/swipper1.webp" alt="">
+              </div>
+              <div class="mycard">
+                <img src="assets/images/swipper2.webp" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
+    <!-- Chương trình đặc biệt -->
+    <div class="special-programs">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="section-header text-center">
+              <p>Chương trình</p>
+              <h3>Các chương trình đặc biệt</h3>
+            </div>
+            <div class="section-body">
+              <div class="container-image">
+                <div class="image">
+                  <img src="assets/images/chuongtrinh_1.webp" alt="">
+                </div>
+                <div class="image">
+                  <img src="assets/images/chuongtrinh_2.webp" alt="">
+                </div>
+                <div class="image">
+                  <img src="assets/images/chuongtrinh_3.webp" alt="">
+                </div>
+                <div class="image">
+                  <img src="assets/images/chuongtrinh_4.webp" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="flashsale-section mt-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <span class="flash-sale-title">Món ăn <br></span>
+            <span class="flash-sale-discount">Đang được giảm giá <br></span>
+            <span class="flash-sale-description">Chúng tôi thường xuyên cập nhật những chương trình khuyến mãi để quý thực khách có thể trãi nghiệm tất
+              cả món ăn của chúng tôi.</span>
+              <span class="flash-sale-end">Chương trình đã kết thúc, hẹn gặp lại trong thời gian sớm nhất!</span>
+          </div>
+          <div class="col-lg-6">
+            <a href="" class="flash-sale-link">
+              <img src="assets/images/flash_sale.webp" class="img-fluid" alt="">
+            </a>
+          </div>
+          <div class="col-lg-12">
+            <div class="flash-sale-products">
+              
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <!-- Footer -->
+
   </main>
 </body>
+
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script src="assets/js/main.js"></script>
 
 </html>
