--- a/index.html
+++ b/index.html
@@ -297,9 +297,10 @@
           <div class="col-lg-6">
             <span class="flash-sale-title">Món ăn <br></span>
             <span class="flash-sale-discount">Đang được giảm giá <br></span>
-            <span class="flash-sale-description">Chúng tôi thường xuyên cập nhật những chương trình khuyến mãi để quý thực khách có thể trãi nghiệm tất
+            <span class="flash-sale-description">Chúng tôi thường xuyên cập nhật những chương trình khuyến mãi để quý
+              thực khách có thể trãi nghiệm tất
               cả món ăn của chúng tôi.</span>
-              <span class="flash-sale-end">Chương trình đã kết thúc, hẹn gặp lại trong thời gian sớm nhất!</span>
+            <span class="flash-sale-end">Chương trình đã kết thúc, hẹn gặp lại trong thời gian sớm nhất!</span>
           </div>
           <div class="col-lg-6">
             <a href="" class="flash-sale-link">
@@ -308,16 +309,137 @@
           </div>
           <div class="col-lg-12">
             <div class="flash-sale-products">
-              
+
             </div>
           </div>
         </div>
       </div>
 
     </div>
-    <!-- Footer -->
-
+  </div>
+  <!-- Footer -->
+  <footer class="footer bg-green text-white pt-5 pb-3">
+    <div class="container">
+      <div class="row">
+        <!-- VỀ CHÚNG TÔI -->
+        <div class="col-lg-3 col-md-6 mb-4">
+          <div class="footer-widget h-100 d-flex flex-column justify-content-between">
+            <div>
+              <h4 class="footer-title mb-2">VỀ CHÚNG TÔI</h4>
+              <div class="footer-underline mb-3"></div>
+              <p class="footer-desc mb-4">
+                Chào mừng bạn đến với Dola Food - điểm đến lý tưởng cho những người yêu thưởng thức pizza tại thành phố! Dola Food tự hào là địa chỉ pizza hàng đầu, nổi tiếng với chất lượng món ăn tuyệt vời, dịch vụ tận tâm và mức độ hài lòng cao từ phía khách hàng.
+              </p>
+              <h5 class="footer-title mb-2" style="font-size: 1.1rem;">HÌNH THỨC THANH TOÁN</h5>
+              <div class="footer-underline mb-3"></div>
+              <div class="d-flex gap-2 align-items-center">
+                <div class="payment-method text-center">
+                  <img src="assets/images/payment_1.webp" alt="Tiền mặt" width="48">
+                </div>
+                <div class="payment-method text-center">
+                  <img src="assets/images/payment_2.webp" alt="Chuyển khoản" width="48">
+                </div>
+                <div class="payment-method text-center">
+                  <img src="assets/images/payment_3.webp" alt="Visa/Master" width="48">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- THÔNG TIN -->
+        <div class="col-lg-3 col-md-6 mb-4">
+          <div class="footer-widget h-100 d-flex flex-column justify-content-between">
+            <div>
+              <h4 class="footer-title mb-2">THÔNG TIN</h4>
+              <div class="footer-underline mb-3"></div>
+              <p class="footer-desc mb-3">
+                Công ty TNHH Dola Food chuyên phục vụ trong lĩnh vực nhà hàng. Mã số thuế: 123456xxxx - Ngày cấp: 13/05/2024 - Nơi cấp: Sở kế hoạch và đầu tư TPHCM - Website: dola-food.mysapo.net
+              </p>
+              <ul class="footer-contact list-unstyled mb-4">
+                <li class="d-flex align-items-start mb-3">
+                  <span class="footer-icon me-2"><i class="fas fa-map-marker-alt"></i></span>
+                  <span>70 Lữ Gia, Phường 15, Quận 11, TP.HCM</span>
+                </li>
+                <li class="d-flex align-items-start mb-3">
+                  <span class="footer-icon me-2"><i class="fas fa-clock"></i></span>
+                  <span>
+                    8h - 22h<br>
+                    Từ thứ 2 đến chủ nhật
+                  </span>
+                </li>
+                <li class="d-flex align-items-start mb-3">
+                  <span class="footer-icon me-2"><i class="fas fa-phone"></i></span>
+                  <span>1900 6750</span>
+                </li>
+                <li class="d-flex align-items-start mb-3">
+                  <span class="footer-icon me-2"><i class="fas fa-envelope"></i></span>
+                  <span>support@sapo.vn</span>
+                </li>
+              </ul>
+              <h6 class="footer-title mb-2" style="font-size: 1.1rem;">THEO DÕI CHÚNG TÔI</h6>
+              <div class="footer-underline mb-3"></div>
+              <div class="footer-social d-flex gap-3">
+                <a href="#" class="footer-social-icon"><img src="assets/images/zalo-icon.png" alt="Zalo" width="22"></a>
+                <a href="#" class="footer-social-icon"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="footer-social-icon"><i class="fab fa-youtube"></i></a>
+                <a href="#" class="footer-social-icon"><i class="fab fa-instagram"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- CHÍNH SÁCH VÀ HƯỚNG DẪN -->
+        <div class="col-lg-3 col-md-6 mb-4">
+          <div class="footer-widget h-100">
+            <h4 class="footer-title mb-2">CHÍNH SÁCH VÀ HƯỚNG DẪN</h4>
+            <div class="footer-underline mb-3"></div>
+            <ul class="footer-menu-list ps-0">
+              <li class="menu-item mb-3"><a href="#" class="menu-link"><span class="me-2">→</span>Chính sách thành viên</a></li>
+              <li class="menu-item mb-3"><a href="#" class="menu-link"><span class="me-2">→</span>Chính sách thanh toán</a></li>
+              <li class="menu-item mb-3"><a href="#" class="menu-link"><span class="me-2">→</span>Bảo mật thông tin cá nhân</a></li>
+              <li class="menu-item mb-3"><a href="#" class="menu-link"><span class="me-2">→</span>Hướng dẫn mua hàng</a></li>
+              <li class="menu-item mb-3"><a href="#" class="menu-link"><span class="me-2">→</span>Hướng dẫn thanh toán</a></li>
+            </ul>
+          </div>
+        </div>
+        <!-- TIN TỨC MỚI -->
+        <div class="col-lg-3 col-md-6 mb-4">
+          <div class="footer-widget h-100">
+            <h4 class="footer-title mb-2">TIN TỨC MỚI</h4>
+            <div class="footer-underline mb-3"></div>
+            <ul class="footer-news-list list-unstyled">
+              <li class="mb-3">
+                <a href="#" class="d-flex align-items-center text-white text-decoration-none footer-news-link">
+                  <img src="assets/images/de-banh-pizza-mua-o-dau-0.webp" alt="news1" class="footer-news-img me-3">
+                  <span>Để bánh pizza mua ở đâu đảm bảo chất lượng?</span>
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="#" class="d-flex align-items-center text-white text-decoration-none footer-news-link">
+                  <img src="assets/images/cach-lam-pizza-xot-mayonnaise-4.webp" alt="news2" class="footer-news-img me-3">
+                  <span>Cách làm pizza xốt Mayonnaise thơm béo...</span>
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="#" class="d-flex align-items-center text-white text-decoration-none footer-news-link">
+                  <img src="assets/images/tim-hieu-cac-loai-pasta-0.jpg" alt="news3" class="footer-news-img me-3">
+                  <span>Pasta là món ăn của nước nào? Pasta và...</span>
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="#" class="d-flex align-items-center text-white text-decoration-none footer-news-link">
+                  <img src="assets/images/tiet-lo-tinh-cach-qua-cach-an-pizza-0.jpg" alt="news4" class="footer-news-img me-3">
+                  <span>Tiết lộ tính cách qua cách ăn pizza cực thú vị</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
   </main>
+</body>
+</main>
 </body>
 
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
