add : best seller & banner section

--- a/index.html
+++ b/index.html
@@ -293,31 +293,263 @@
     </div>
     <div class="flashsale-section mt-5">
       <div class="container">
-        <div class="row">
+        <div class="row position-relative">
           <div class="col-lg-6">
             <span class="flash-sale-title">Món ăn <br></span>
             <span class="flash-sale-discount">Đang được giảm giá <br></span>
             <span class="flash-sale-description">Chúng tôi thường xuyên cập nhật những chương trình khuyến mãi để quý
               thực khách có thể trãi nghiệm tất
               cả món ăn của chúng tôi.</span>
-            <span class="flash-sale-end">Chương trình đã kết thúc, hẹn gặp lại trong thời gian sớm nhất!</span>
+              <span class="flash-sale-end">Chương trình đã kết thúc, hẹn gặp lại trong thời gian sớm nhất!</span>
           </div>
           <div class="col-lg-6">
             <a href="" class="flash-sale-link">
               <img src="assets/images/flash_sale.webp" class="img-fluid" alt="">
             </a>
           </div>
-          <div class="col-lg-12">
-            <div class="flash-sale-products">
-
+          <div class="col-lg-12 col-ct">
+            <div class="flash-sale-products-static py-4">
+              <div class="container">
+                <!-- Flash Sale Products Swiper -->
+                <div class="swiper flash-sale-swiper">
+                  <div class="swiper-wrapper">
+                    <!-- Product 1 -->
+                    <div class="swiper-slide">
+                      <div class="product-card">
+                        <div class="product-card-header">
+                          <img src="assets/images/pro1.webp" alt="Gà Giòn Xốt Tương Tỏi Hàn Quốc" class="product-img">
+                          <button class="btn-fav"><i class="far fa-heart"></i></button>
+                        </div>
+                        <div class="product-card-body">
+                          <h5 class="product-title">Gà Giòn Xốt Tương Tỏi Hàn Quốc</h5>
+                          <p class="product-desc">Những miếng gà tươi ngon tẩm bột chiên giòn phủ xốt tương tỏi kiểu Hàn...</p>
+                          <a href="#" class="product-more">Xem thêm</a>
+                          <div class="d-flex justify-content-between align-items-center mt-2">
+                            <span class="product-price">Giá chỉ từ <b>99.000₫</b></span>
+                            <button class="btn btn-add">Thêm</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- Product 2 -->
+                    <div class="swiper-slide">
+                      <div class="product-card">
+                        <div class="product-card-header">
+                          <img src="assets/images/pro2.webp" alt="Gà Giòn Xốt Hàn - Truyền Thống" class="product-img">
+                          <button class="btn-fav"><i class="far fa-heart"></i></button>
+                        </div>
+                        <div class="product-card-body">
+                          <h5 class="product-title">Gà Giòn Xốt Hàn - Truyền Thống...</h5>
+                          <p class="product-desc">Gà tẩm bột chiên giòn rụm phủ lớp xốt (có chút vị cay rất nhẹ) đặc trưng theo...</p>
+                          <a href="#" class="product-more">Xem thêm</a>
+                          <div class="d-flex justify-content-between align-items-center mt-2">
+                            <span class="product-price">Giá chỉ từ <b>429.000₫</b></span>
+                            <button class="btn btn-add">Thêm</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- Product 3 -->
+                    <div class="swiper-slide">
+                      <div class="product-card">
+                        <div class="product-card-header">
+                          <img src="assets/images/pro3.webp" alt="Gà Giòn Xốt Hàn - Truyền Thống" class="product-img">
+                          <button class="btn-fav"><i class="far fa-heart"></i></button>
+                        </div>
+                        <div class="product-card-body">
+                          <h5 class="product-title">Gà Giòn Xốt Hàn - Truyền Thống...</h5>
+                          <p class="product-desc">Gà tẩm bột chiên giòn rụm phủ lớp xốt (có chút vị cay rất nhẹ) đặc trưng theo...</p>
+                          <a href="#" class="product-more">Xem thêm</a>
+                          <div class="d-flex justify-content-between align-items-center mt-2">
+                            <span class="product-price">Giá chỉ từ <b>249.000₫</b></span>
+                            <button class="btn btn-add">Thêm</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- Product 4 -->
+                    <div class="swiper-slide">
+                      <div class="product-card">
+                        <div class="product-card-header">
+                          <img src="assets/images/pro4.webp" alt="Gà Nướng BBQ (2 miếng)" class="product-img">
+                          <button class="btn-fav"><i class="far fa-heart"></i></button>
+                        </div>
+                        <div class="product-card-body">
+                          <h5 class="product-title">Gà Nướng BBQ (2 miếng)</h5>
+                          <p class="product-desc">Thịt gà mềm ngọt, thấm đẫm gia vị, da gà giòn rụm, màu vàng ươm bắt mắt....</p>
+                          <a href="#" class="product-more">Xem thêm</a>
+                          <div class="d-flex justify-content-between align-items-center mt-2">
+                            <span class="product-price">Giá chỉ từ <b>99.000₫</b></span>
+                            <button class="btn btn-add">Thêm</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- Product 5 (Additional for 5 products on large screens) -->
+                    <div class="swiper-slide">
+                      <div class="product-card">
+                        <div class="product-card-header">
+                          <img src="assets/images/pro4.webp" alt="Pizza Puff_Gà BBQ Nướng..." class="product-img">
+                          <button class="btn-fav"><i class="far fa-heart"></i></button>
+                        </div>
+                        <div class="product-card-body">
+                          <h5 class="product-title">Pizza Puff_Gà BBQ Nướng...</h5>
+                          <p class="product-desc">Gà nướng dứa cùng phô mai thơm béo và sốt Thousand...</p>
+                          <a href="#" class="product-more">Xem thêm</a>
+                          <div class="d-flex justify-content-between align-items-center mt-2">
+                            <span class="product-price">Giá chỉ từ <b>89.000₫</b></span>
+                            <button class="btn btn-add">Thêm</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- Add navigation arrows -->
+                  <div class="swiper-button-next">
+                     
+                  </div>
+                  <div class="swiper-button-prev"></div>
+             
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
-
     </div>
-  </div>
-  <!-- Footer -->
+    <section class="best-seller-section py-5">
+      <div class="container">
+        <div class="text-center mb-4">
+          <div class="section-subtitle text-danger" style="font-weight:700; font-size:1.5rem;">Món ăn</div>
+          <h2 class="section-title mb-0" style="color:#05743b; font-family:'Lobster',cursive; font-size:3rem; font-weight:700;">Được bán nhiều nhất</h2>
+        </div>
+        <!-- Best Seller Products Swiper -->
+        <div class="swiper best-seller-swiper">
+          <div class="swiper-wrapper">
+            <!-- Product 1 -->
+            <div class="swiper-slide">
+              <div class="product-card">
+                <div class="product-card-header">
+                  <img src="assets/images/pro1.webp" alt="Gà Giòn Xốt Tương Tỏi Hàn Quốc" class="product-img">
+                  <button class="btn-fav"><i class="far fa-heart"></i></button>
+                </div>
+                <div class="product-card-body">
+                  <h5 class="product-title">Gà Giòn Xốt Tương Tỏi Hàn Quốc</h5>
+                  <p class="product-desc">Những miếng gà tươi ngon tẩm bột chiên giòn phủ xốt tương tỏi kiểu Hàn...</p>
+                  <a href="#" class="product-more">Xem thêm</a>
+                  <div class="d-flex justify-content-between align-items-center mt-2">
+                    <span class="product-price">Giá chỉ từ <b>99.000₫</b></span>
+                    <button class="btn btn-add">Thêm</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Product 2 -->
+            <div class="swiper-slide">
+              <div class="product-card">
+                <div class="product-card-header">
+                  <img src="assets/images/pro2.webp" alt="Gà Giòn Xốt Hàn - Truyền Thống" class="product-img">
+                  <button class="btn-fav"><i class="far fa-heart"></i></button>
+                </div>
+                <div class="product-card-body">
+                  <h5 class="product-title">Gà Giòn Xốt Hàn - Truyền Thống...</h5>
+                  <p class="product-desc">Gà tẩm bột chiên giòn rụm phủ lớp xốt (có chút vị cay rất nhẹ) đặc trưng theo...</p>
+                  <a href="#" class="product-more">Xem thêm</a>
+                  <div class="d-flex justify-content-between align-items-center mt-2">
+                    <span class="product-price">Giá chỉ từ <b>429.000₫</b></span>
+                    <button class="btn btn-add">Thêm</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Product 3 -->
+            <div class="swiper-slide">
+              <div class="product-card">
+                <div class="product-card-header">
+                  <img src="assets/images/pro3.webp" alt="Gà Giòn Xốt Hàn - Truyền Thống" class="product-img">
+                  <button class="btn-fav"><i class="far fa-heart"></i></button>
+                </div>
+                <div class="product-card-body">
+                  <h5 class="product-title">Gà Giòn Xốt Hàn - Truyền Thống...</h5>
+                  <p class="product-desc">Gà tẩm bột chiên giòn rụm phủ lớp xốt (có chút vị cay rất nhẹ) đặc trưng theo...</p>
+                  <a href="#" class="product-more">Xem thêm</a>
+                  <div class="d-flex justify-content-between align-items-center mt-2">
+                    <span class="product-price">Giá chỉ từ <b>249.000₫</b></span>
+                    <button class="btn btn-add">Thêm</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Product 4 -->
+            <div class="swiper-slide">
+              <div class="product-card">
+                <div class="product-card-header">
+                  <img src="assets/images/pro2.webp" alt="Gà Nướng BBQ (2 miếng)" class="product-img">
+                  <button class="btn-fav"><i class="far fa-heart"></i></button>
+                </div>
+                <div class="product-card-body">
+                  <h5 class="product-title">Gà Nướng BBQ (2 miếng)</h5>
+                  <p class="product-desc">Thịt gà mềm ngọt, thấm đẫm gia vị, da gà giòn rụm, màu vàng ươm bắt mắt....</p>
+                  <a href="#" class="product-more">Xem thêm</a>
+                  <div class="d-flex justify-content-between align-items-center mt-2">
+                    <span class="product-price">Giá chỉ từ <b>99.000₫</b></span>
+                    <button class="btn btn-add">Thêm</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Product 5 (NEW) -->
+            <div class="swiper-slide">
+              <div class="product-card position-relative">
+                <div class="product-card-header">
+                  <img src="assets/images/pro4.webp" alt="Pizza Puff_Gà BBQ Nướng..." class="product-img">
+                  <span class="badge-new">NEW</span>
+                  <button class="btn-fav"><i class="far fa-heart"></i></button>
+                </div>
+                <div class="product-card-body">
+                  <h5 class="product-title">Pizza Puff_Gà BBQ Nướng...</h5>
+                  <p class="product-desc">Gà nướng dứa cùng phô mai thơm béo và sốt Thousand...</p>
+                  <a href="#" class="product-more">Xem thêm</a>
+                  <div class="d-flex justify-content-between align-items-center mt-2">
+                    <span class="product-price">Giá chỉ từ <b>89.000₫</b></span>
+                    <button class="btn btn-add">Thêm</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Add navigation arrows -->
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
+          <!-- Add pagination -->
+          <div class="swiper-pagination"></div>
+        </div>
+      </div>
+    </section>
+    <section class="section-banner">
+      <div class="container">
+        <div class="swiper banner-swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="assets/images/banner_three1_1.webp" class="img-bg"  alt="">
+              <img src="assets/images/banner_three_1.webp" alt="Cheese Pizza" class="banner-img" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/images/banner_three1_1.webp" class="img-bg"  alt="">
+              <img src="assets/images/banner_three_2.webp" alt="Italian Pizza" class="banner-img" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/images/banner_three1_1.webp" class="img-bg"  alt="">
+              <img src="assets/images/banner_three_3.webp" alt="Hottest Pizza" class="banner-img" />
+            </div>
+            <!-- Thêm slide nếu cần -->
+          </div>
+          <div class="swiper-button-next banner-btn"></div>
+          <div class="swiper-button-prev banner-btn"></div>
+        </div>
+      </div>
+    </section>
+    <!-- Footer -->
   <footer class="footer bg-green text-white pt-5 pb-3">
     <div class="container">
       <div class="row">
@@ -439,7 +671,7 @@
   </footer>
   </main>
 </body>
-</main>
+  </main>
 </body>
 
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
