add: About page(About & Why We Section)

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                       </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">
+                      <a class="nav-link" href="gioithieu.html">
                         Giới thiệu
                       </a>
                     </li>
@@ -251,8 +251,66 @@
 
             </div>
             <div class="section-body">
-              <div class="mycard">
-                <img src="assets/images/swipper1.webp" alt="">
+              <div class="product-list-scroll">
+                <div class="food-card">
+                  <div class="img-container">
+                    <img src="assets/images/0002257-spaghetti-shrimp-rose-30.webp" class="food-img" alt="Pizza 1">
+                    <img src="assets/images/heart-green.svg" alt="fav" class="fav-icon">
+                  </div>
+                  <div class="card-title mb-0">Pizza Puff_Gà BBQ Nướng Dứa</div>
+                  <div class="desc">
+                    Gà nướng dứa cùng phô mai thơm béo và sốt Thousand Island...
+                  </div>
+                  <a href="#" class="see-more">Xem thêm</a>
+                  <div class="d-flex justify-content-between align-items-center mt-2">
+                    <div>
+                      <div class="price-label">Giá chỉ từ</div>
+                      <div class="price-value">89.000₫</div>
+                    </div>
+                    <button class="btn btn-success">Thêm</button>
+                  </div>
+                </div>
+              </div>
+
+              <div class="product-list-scroll">
+                <div class="food-card">
+                  <div class="img-container">
+                    <img src="assets/images/0002257-spaghetti-shrimp-rose-30.webp" class="food-img" alt="Pizza 1">
+                    <img src="assets/images/heart-green.svg" alt="fav" class="fav-icon">
+                  </div>
+                  <div class="card-title mb-0">Pizza Puff_Gà BBQ Nướng Dứa</div>
+                  <div class="desc">
+                    Gà nướng dứa cùng phô mai thơm béo và sốt Thousand Island...
+                  </div>
+                  <a href="#" class="see-more">Xem thêm</a>
+                  <div class="d-flex justify-content-between align-items-center mt-2">
+                    <div>
+                      <div class="price-label">Giá chỉ từ</div>
+                      <div class="price-value">89.000₫</div>
+                    </div>
+                    <button class="btn btn-success">Thêm</button>
+                  </div>
+                </div>
+              </div>
+              <div class="product-list-scroll">
+                <div class="food-card">
+                  <div class="img-container">
+                    <img src="assets/images/0002257-spaghetti-shrimp-rose-30.webp" class="food-img" alt="Pizza 1">
+                    <img src="assets/images/heart-green.svg" alt="fav" class="fav-icon">
+                  </div>
+                  <div class="card-title mb-0">Pizza Puff_Gà BBQ Nướng Dứa</div>
+                  <div class="desc">
+                    Gà nướng dứa cùng phô mai thơm béo và sốt Thousand Island...
+                  </div>
+                  <a href="#" class="see-more">Xem thêm</a>
+                  <div class="d-flex justify-content-between align-items-center mt-2">
+                    <div>
+                      <div class="price-label">Giá chỉ từ</div>
+                      <div class="price-value">89.000₫</div>
+                    </div>
+                    <button class="btn btn-success">Thêm</button>
+                  </div>
+                </div>
               </div>
               <div class="mycard">
                 <img src="assets/images/swipper2.webp" alt="">
@@ -266,7 +324,7 @@
     <div class="special-programs">
       <div class="container">
         <div class="row">
-          <div class="col-12">
+          <div class="col-lg-12">
             <div class="section-header text-center">
               <p>Chương trình</p>
               <h3>Các chương trình đặc biệt</h3>
@@ -521,8 +579,7 @@
           <!-- Add navigation arrows -->
           <div class="swiper-button-next"></div>
           <div class="swiper-button-prev"></div>
-          <!-- Add pagination -->
-          <div class="swiper-pagination"></div>
+          
         </div>
       </div>
     </section>
@@ -549,7 +606,47 @@
         </div>
       </div>
     </section>
+    <!-- Food Menu -->
+    <section class="food-menu" id="food-menu">
+      <div class="container">
+        <div class="food-menu-header text-center mb-3">
+          <h2 class="fw-bold" style="color:#e31837;; font-size:1.5rem;">Tất cả</h2>
+          <div class="" style="font-size: 2.5rem; font-weight:600; color:#05743b;">Menu dành cho bạn</div>
+        </div>
+        <!-- Sticky Menu Tabs -->
+        <div id="food-menu-tabs" class="food-menu-tabs" style="z-index: 1050;">
+          <ul class="nav nav-pills justify-content-center" id="menuTab" role="tablist">
+            <li class="nav-item" role="presentation">
+              <a class="nav-link active" href="#pizza" role="tab">Pizza</a>
+            </li>
+            <li class="nav-item" role="presentation">
+              <a class="nav-link" href="#appetizer" role="tab">Khai vị</a>
+            </li>
+            <li class="nav-item" role="presentation">
+              <a class="nav-link" href="#pasta" role="tab">Mỳ Ý</a>
+            </li>
+            <li class="nav-item" role="presentation">
+              <a class="nav-link" href="#salad" role="tab">Salad</a>
+            </li>
+            <li class="nav-item" role="presentation">
+              <a class="nav-link" href="#drink" role="tab">Thức uống</a>
+            </li>
+          </ul>
+        </div>
+        <!-- Food Sections -->
+        <div class="row">
+          <div class="col-12 mt-4">
+            <div class="section-header">
+              <p>Pizza</p>
+            </div>
+          
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Footer -->
+ 
+  </main>
   <footer class="footer bg-green text-white pt-5 pb-3">
     <div class="container">
       <div class="row">
@@ -669,7 +766,6 @@
       </div>
     </div>
   </footer>
-  </main>
 </body>
   </main>
 </body>
